# Anemone

./: .gitignore  Anchor.toml  README.md  SECURITY.md  package.json  txtx.yml
app/: .env.example  README.md  package.json
deployments/: devnet.json
keeper/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
programs/anemone/: Cargo.toml
programs/anemone/src/: errors.rs  lib.rs
programs/anemone/src/helpers/: kamino.rs  kamino_cpi.rs  mod.rs  settlement.rs  spread.rs
programs/anemone/src/instructions/: mod.rs
programs/anemone/src/instructions/admin/: create_market.rs  initialize_protocol.rs  mod.rs  pause_market.rs  pause_protocol.rs  set_keeper.rs  set_rate_index_oracle.rs
programs/anemone/src/instructions/keeper/: deposit_to_kamino.rs  mod.rs  sync_kamino_yield.rs  update_rate_index.rs  withdraw_from_kamino.rs
programs/anemone/src/instructions/lp/: claim_withdrawal.rs  deposit_liquidity.rs  mod.rs  request_withdrawal.rs
programs/anemone/src/instructions/trader/: add_collateral.rs  claim_matured.rs  close_position_early.rs  liquidate_position.rs  mod.rs  open_swap.rs  settle_period.rs
programs/anemone/src/state/: lp.rs  market.rs  mod.rs  position.rs  protocol.rs
programs/anemone/tests/: kamino_layout.rs
runbooks/: KEEPER_BOT_OPERATIONS.md  README.md
scripts/: check-devnet.ts  check-kamino-layout.ts  demo-surfpool.ts  deploy.sh  devnet-placeholder-keypairs.json  faucet-usdc-devnet.ts  setup-devnet.ts  setup-surfpool.ts  surfpool-overrides.ts  test-e2e.ts  test-mainnet-cycle.ts  test-mainnet-sync.ts  (+4 more)
(+43 files in other folders)
