[package]
name = "anemone"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anemone"

[features]
# `stub-oracle` exposes the admin-only `set_rate_index_oracle` instruction used
# to seed/update the rate index on clusters where Kamino K-Lend is not deployed
# (localnet, devnet). It is DEFAULT-ENABLED so `anchor test` and devnet demos
# work with zero extra flags.
#
# MAINNET BUILDS MUST OMIT THIS FEATURE. Use:
#     anchor build --no-default-features
# or the `build:mainnet` npm script. See deploy checklist in
# docs/security-remediation-plan.md §Fase 5.
default = ["stub-oracle"]
stub-oracle = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
kamino-lend = "=0.4.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
